# zziplib_conan

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  conanfile.py
.circleci/: config.yml
test_package/: conanfile.py  test_package.cpp
